finalizes predictions, sldo including final analysis

--- a/Starter_Code/Credit Risk Evaluator.ipynb
+++ b/Starter_Code/Credit Risk Evaluator.ipynb
@@ -254,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Replace the text in this markdown cell with your predictions, and be sure to provide justification for your guess.*"
+    "Since the data we are dealing with categorical data, I predict that the Logistic Regression model will be the inferior model. Typically, Random Forest is superior when making predictions with binary data."
    ]
   },
   {
@@ -351,10 +351,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual:\t\t[True, True, True, True, True, True, True, True, False, True]\n",
+      "Predicted:\t[True, True, True, True, True, True, True, True, False, True]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/bp/kkf4c1nj557c5frmyn420c7c0000gn/T/ipykernel_43296/1663829093.py:1: FutureWarning: The behavior of `series[i:j]` with an integer-dtype index is deprecated. In a future version, this will be treated as *label-based* indexing, consistent with e.g. `series[i]` lookups. To retain the old behavior, use `series.iloc[i:j]`. To get the future behavior, use `series.loc[i:j]`.\n",
+      "  print(f'Actual:\\t\\t{list(y_test[:10])}')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# make predictions, abbreviated sample output \n",
+    "print(f'Actual:\\t\\t{list(y_test[:10])}')\n",
+    "print(f'Predicted:\\t{list(classifier.predict(X_test[:10]))}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Which model performed better? How does that compare to your prediction? Replace the text in this markdown cell with your answers to these questions.*"
+    "Based on the combined higher training score and lower testing score outputs, it seems that the Random Forest Classifier model is suffering from overfitting. This is contrary to my hypothesis, which underestimated the Logistic Regression Model. "
    ]
   }
  ],
